2006-08-02 Roman
- Fix:/Archive/BaseArch: std::string attribute "append" using is fixed.

2006-08-01 Roman
- !!!!:/DAQ: Move the logical level parameters subsystem to subsystem "DAQ" to module DAQ.LogicLev.
- !!!!:/ObjectModel: Move the function's library functions Special.FLibTime to library Special.FLibSYS.
- !!!!:/System: The interface of management by system and its language is systematized and unified.
- !!:/Security: Id is removed and permission checking is updated.
- !!:/DB: The user field is added into DB "SYS". It allow to store into DB the user's variables.
- /System: Some OpenSCADA fixing.

2006-07-10 Roman
- !!!:/System: Add module Special.FLibSYS. Module allow system API functions.
- !!!:/System: Replace html documentation to pdf. Converted through OpenOffice.
- Fix:/Archive: Fix no transit order parameters in functions: TArchive::getR(), TArchive::getI(), TArchive::getB().
- !!!!:/Archive: Move the averaging code from module to function TArchivator::Task().
- !!!!:/Archive/BaseArh: Made performance optimization on read and write. The write performance rise to 10 bout!
- !!!!:/DAQ/JavaLikeCalc: Add cycle's operators (for and while) support to Java-like language.

2006-06-30 Roman
- Fix:/Archive: Fix value buffer performance optimization.

2006-06-27 Roman OpenSCADA 0.5.0
- /System: Translate documents TODO and README to English.
- /System: Replace old pdf documentation at new html documentation
- /System: Update build system.
- !!:/Archive: Optimize value buffer performance. Use half divide method into free access buffer. 
- /Archive/BaseArh: Add export to wav function.
- /Archive/BaseArh: Relised 0.9.0.
- /DB/DBF: Relised 1.8.0.
- /DB/MySQL: Relised 1.2.0.
- /DB/SQLite: Relised 1.2.0.
- /DAQ/BlockCalc: Relised 0.9.0.
- /DAQ/DiamondBoards: Relised 0.9.0.
- /DAQ/JavaLikeCalc: Relised 0.9.5.
- /DAQ/OperationSystem: Relised 1.2.0.
- /Protocol/HTTP: Relised 1.2.5.
- /Special/SystemTest: Relised 1.3.0.
- /Transport/Sockets: Relised 1.2.1.