@@ -76,7 +76,8 @@ namespace BDMySQL
 	    string host, user, pass, bd, u_sock, cd_pg;
 	    int    port;
 	    
-	    MYSQL connect;				    
+	    MYSQL connect;
+	    int	conn_res;
     };
 
     class BDMod: public TTipBD
